--- a/docs/references.bib
+++ b/docs/references.bib
@@ -336,8 +336,24 @@
 @inbook{And10,
     author = {J. Chris Anderson and Jan Lehnardt and Noah Slater},
     booktitle = {{CouchDB: The Definitive Guide}},
-    title = {{CouchDB -- Conflict Management}},
+    title = {{Conflict Management}},
     publisher = {O'Reilly Media, Inc.},
     year = {2010},
     url = {http://guide.couchdb.org/draft/conflicts.html#conflicts}
+}
+
+@misc{mysql:replication,
+    author = {Oracle},
+    title = {{Replication --- MySQL 5.6 Reference Manual}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130427080826/http://dev.mysql.com/doc/refman/5.6/en/replication.html},
+    note = {[Online; accessed 03-June-2013]}
+}
+
+@misc{mysql:replication-implementation,
+    author = {Oracle},
+    title = {{Replication Implementation --- MySQL 5.6 Reference Manual}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130516162406/http://dev.mysql.com/doc/refman/5.6/en/replication-implementation.html},
+    note = {[Online; accessed 03-June-2013]}
 }
