write about MySQL clustering

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -357,3 +357,19 @@
     url = {http://web.archive.org/web/20130516162406/http://dev.mysql.com/doc/refman/5.6/en/replication-implementation.html},
     note = {[Online; accessed 03-June-2013]}
 }
+
+@misc{mysql:clustering-requirements,
+    author = {Oracle},
+    title = {{Cluster Hardware, Software, and Networking Requirements --- MySQL 5.6 Reference Manual}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130516172613/http://dev.mysql.com/doc/refman/5.6/en/mysql-cluster-overview-requirements.html},
+    note = {[Online; accessed 03-June-2013]}
+}
+
+@misc{mysql:clustering-overview,
+    author = {Oracle},
+    title = {{MySQL Cluster Overview --- MySQL 5.6 Reference Manual}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130516161929/http://dev.mysql.com/doc/refman/5.6/en/mysql-cluster-overview.html},
+    note = {[Online; accessed 03-June-2013]}
+}
