write about PostgreSQL replication

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -373,3 +373,11 @@
     url = {http://web.archive.org/web/20130516161929/http://dev.mysql.com/doc/refman/5.6/en/mysql-cluster-overview.html},
     note = {[Online; accessed 03-June-2013]}
 }
+
+@misc{postgresql:replication,
+    author = {PostgreSQL},
+    title = {{Comparison of Different Solutions --- PostgreSQL 9.2 Documentation}},
+    year = {2012},
+    url = {http://web.archive.org/web/20120830122231/http://www.postgresql.org/docs/9.2/static/different-replication-solutions.html},
+    note = {[Online; accessed 03-June-2013]}
+}
