--- a/TODO.org
+++ b/TODO.org
@@ -170,7 +170,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
-  CLOCK: [2013-06-04 Tue 14:01]
+  CLOCK: [2013-06-04 Tue 14:01]--[2013-06-04 Tue 17:16] =>  3:15
   :END:
 * Code improvements
   :LOGBOOK:
