write about Bucarado

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -381,3 +381,11 @@
     url = {http://web.archive.org/web/20120830122231/http://www.postgresql.org/docs/9.2/static/different-replication-solutions.html},
     note = {[Online; accessed 03-June-2013]}
 }
+
+@misc{bucarado:overview,
+    author = {Bucarado},
+    title = {{Overview of Bucarado}},
+    year = {{2013}},
+    url = {http://web.archive.org/web/20130119191644/http://bucardo.org/wiki/Bucardo/Documentation/Overview},
+    note = {[Online; accessed 03-June-2013]}
+}
