write about Oracle Database

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -226,9 +226,9 @@
     author = {Scott Burleigh and Vinton Cerf and Robert Durst and Kevin Fall and Adrian Hooke and Keith Scott and Howard Weiss}
 }
 
-@article{Tow05,
+@techreport{Tow05,
     title = {{Telecomunications Infrastructure in Disasters: Preparing Cities for Crisis Comunications}},
-    journal = {Center for Catastrophe Preparedness and Response --- Robert F. Wagner Graduate School of Public Service New York University},
+    institution = {Center for Catastrophe Preparedness and Response --- Robert F. Wagner Graduate School of Public Service New York University},
     year = {2005},
     url = {https://www.nyu.edu/ccpr/pubs/NYU-DisasterCommunications1-Final.pdf},
     author = {Anthony M. Townsend and Mitchell L. Moss}
@@ -388,4 +388,12 @@
     year = {{2013}},
     url = {http://web.archive.org/web/20130119191644/http://bucardo.org/wiki/Bucardo/Documentation/Overview},
     note = {[Online; accessed 03-June-2013]}
+}
+
+@techreport{oracle:streams,
+    author = {Patricia McElroy and Maria Pratt},
+    title = {{Oracle Database 11g: Oracle Streams}},
+    institution = {Oracle Corporation},
+    year = {2007},
+    url = {http://www.oracle.com/technetwork/database/features/data-integration/twp-streams-11gr1-134658.pdf}
 }
