--- a/docs/references.bib
+++ b/docs/references.bib
@@ -385,7 +385,7 @@
 @misc{bucarado:overview,
     author = {Bucarado},
     title = {{Overview of Bucarado}},
-    year = {{2013}},
+    year = {2013},
     url = {http://web.archive.org/web/20130119191644/http://bucardo.org/wiki/Bucardo/Documentation/Overview},
     note = {[Online; accessed 03-June-2013]}
 }
@@ -396,4 +396,12 @@
     institution = {Oracle Corporation},
     year = {2007},
     url = {http://www.oracle.com/technetwork/database/features/data-integration/twp-streams-11gr1-134658.pdf}
+}
+
+@misc{couchdb:replication,
+    author = {Apache},
+    title = {{Replication --- Apache CouchDB 1.3 Manual}},
+    year = {2013},
+    url = {http://docs.couchdb.org/en/latest/replication.html#replication-procedure},
+    note = {[Online; accessed 06-June-2013]}
 }
