write about MongoDB's replication

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -405,3 +405,11 @@
     url = {http://docs.couchdb.org/en/latest/replication.html#replication-procedure},
     note = {[Online; accessed 06-June-2013]}
 }
+
+@misc{mongodb:replication,
+    author = {MongoDB},
+    title = {{Replica Set Fundamentals --- MongoDB Manual 2.4.4}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130508224342/http://docs.mongodb.org/manual/core/replication/},
+    note = {[Online; accessed 06-June-2013]}
+}
