--- a/TODO.org
+++ b/TODO.org
@@ -155,6 +155,10 @@
   - [X] mset
   - [ ] mget
 * TODO Better merging
+* TODO Recoverable store state
+  - [ ] Was store closed cleanly?
+  - [ ] A list of all the changes made to a store (to speed up
+    computations for updates).
 * DONE Artificial delay network interface
   :LOGBOOK:
   CLOCK: [2013-06-04 Tue 13:14]--[2013-06-04 Tue 13:21] =>  0:07
@@ -170,6 +174,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-06 Thu 12:39]
   CLOCK: [2013-06-06 Thu 10:20]--[2013-06-06 Thu 10:46] =>  0:26
   CLOCK: [2013-06-06 Thu 01:01]--[2013-06-06 Thu 01:16] =>  0:15
   CLOCK: [2013-06-04 Tue 19:07]--[2013-06-04 Tue 20:15] =>  1:08
