--- a/TODO.org
+++ b/TODO.org
@@ -174,6 +174,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-06 Thu 13:37]--[2013-06-06 Thu 14:49] =>  1:12
   CLOCK: [2013-06-06 Thu 12:39]--[2013-06-06 Thu 13:09] =>  0:30
   CLOCK: [2013-06-06 Thu 10:20]--[2013-06-06 Thu 10:46] =>  0:26
   CLOCK: [2013-06-06 Thu 01:01]--[2013-06-06 Thu 01:16] =>  0:15
