expose monkey config in status server interface

--- a/TODO.org
+++ b/TODO.org
@@ -150,6 +150,12 @@
   CLOCK: [2013-06-07 Fri 19:45]--[2013-06-07 Fri 19:55] =>  0:10
   :END:
 * TODO Expose net/monkey config in web interface
+  :LOGBOOK:
+  CLOCK: [2013-06-08 Sat 00:00]--[2013-06-08 Sat 01:11] =>  1:11
+  CLOCK: [2013-06-07 Fri 19:58]--[2013-06-07 Fri 19:59] =>  0:01
+  :END:
+  - [X] Expose config in status interface
+  - [ ] Expose config in status UI
 * TODO Set/get in web UI
 * DONE Multi-entry changes
   :LOGBOOK:
