--- a/TODO.org
+++ b/TODO.org
@@ -192,6 +192,8 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-09 Sun 18:07]--[2013-06-09 Sun 18:14] =>  0:07
+  CLOCK: [2013-06-09 Sun 16:55]--[2013-06-09 Sun 18:05] =>  1:10
   CLOCK: [2013-06-06 Thu 13:37]--[2013-06-06 Thu 14:49] =>  1:12
   CLOCK: [2013-06-06 Thu 12:39]--[2013-06-06 Thu 13:09] =>  0:30
   CLOCK: [2013-06-06 Thu 10:20]--[2013-06-06 Thu 10:46] =>  0:26
