--- a/docs/references.bib
+++ b/docs/references.bib
@@ -20,7 +20,7 @@
 @misc{Zicari12,
   author = {Roberto V. Zicari},
   title = {{Two Cons Against NoSQL. Part I}},
-  url = {http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
+  url = {http://web.archive.org/web/20130510235524/http://www.odbms.org/blog/2012/10/two-cons-against-nosql-part-i/},
   date = {2012-10-30},
   year = {2012},
   note = {[Online; accessed 29-November-2012]}
@@ -412,4 +412,28 @@
     year = {2013},
     url = {http://web.archive.org/web/20130508224342/http://docs.mongodb.org/manual/core/replication/},
     note = {[Online; accessed 06-June-2013]}
+}
+
+@misc{redis:who-uses,
+    author = {Redis},
+    title = {{Who's using Redis?}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130602223215/http://redis.io/topics/whos-using-redis},
+    note = {[Online; accessed 09-June-2013]}
+}
+
+@misc{couchdb:in-the-wild,
+    author = {CouchDB},
+    title = {{CouchDB In The Wild}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130424124401/http://wiki.apache.org/couchdb/CouchDB_in_the_wild},
+   note = {[Online; accessed 09-June-2013]}
+}
+
+@misc{mongodb:production-deployments,
+    author = {MongoDB},
+    title = {{Production Deployments}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130512081500/http://www.mongodb.org/about/production-deployments/},
+    note = {[Online; accessed 09-June-2013]}
 }
