write about field types

--- a/TODO.org
+++ b/TODO.org
@@ -192,6 +192,8 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-09 Sun 20:45]--[2013-06-09 Sun 21:54] =>  1:09
+  CLOCK: [2013-06-09 Sun 19:51]--[2013-06-09 Sun 20:31] =>  0:40
   CLOCK: [2013-06-09 Sun 18:07]--[2013-06-09 Sun 18:14] =>  0:07
   CLOCK: [2013-06-09 Sun 16:55]--[2013-06-09 Sun 18:05] =>  1:10
   CLOCK: [2013-06-06 Thu 13:37]--[2013-06-06 Thu 14:49] =>  1:12
