--- a/docs/references.bib
+++ b/docs/references.bib
@@ -437,3 +437,35 @@
     url = {http://web.archive.org/web/20130512081500/http://www.mongodb.org/about/production-deployments/},
     note = {[Online; accessed 09-June-2013]}
 }
+
+@misc{redis:types,
+    author = {Redis},
+    title = {{Data Types --- Redis}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130511220249/http://redis.io/topics/data-types},
+    note = {[Online; accessed 09-June-2013]}
+}
+
+@misc{sql-language,
+    author = {ISO},
+    title = {{ISO/IEC 9075 --- Database Language SQL}},
+    year = {1992},
+    url = {http://web.archive.org/web/20130401100708/http://www.contrib.andrew.cmu.edu/~shadow/sql/sql1992.txt}
+}
+
+@misc{mongodb:bson-types,
+    author = {MongoDB},
+    title = {{BSON types --- Glossary --- MongoDB Manual 2.4.3}},
+    year = {2013},
+    url = {http://web.archive.org/web/20130501115057/http://docs.mongodb.org/manual/reference/glossary/#term-bson-types},
+    note = {[Online; accessed 09-June-2013]}
+}
+
+@inbook{couchdb:json,
+    author = {J. Chris Anderson and Jan Lehnardt and Noah Slater},
+    booktitle = {{CouchDB: The Definitive Guide}},
+    title = {{JSON}},
+    publisher = {O'Reilly Media, Inc.},
+    year = {2010},
+    url = {http://guide.couchdb.org/draft/json.html}
+}
