use phantoms to distinguish between sending and reciving sockets

--- a/TODO.org
+++ b/TODO.org
@@ -205,6 +205,7 @@
   :END:
 * Code improvements
   :LOGBOOK:
+  CLOCK: [2013-06-10 Mon 01:23]--[2013-06-10 Mon 01:33] =>  0:10
   CLOCK: [2013-06-04 Tue 00:35]--[2013-06-04 Tue 00:37] =>  0:02
   CLOCK: [2013-06-03 Mon 16:56]--[2013-06-03 Mon 17:19] =>  0:23
   CLOCK: [2013-06-03 Mon 16:18]--[2013-06-03 Mon 16:26] =>  0:08
