--- a/TODO.org
+++ b/TODO.org
@@ -190,6 +190,8 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-12 Wed 02:56]--[2013-06-12 Wed 03:22] =>  0:26
+  CLOCK: [2013-06-12 Wed 02:45]--[2013-06-12 Wed 02:52] =>  0:07
   CLOCK: [2013-06-09 Sun 20:45]--[2013-06-09 Sun 21:54] =>  1:09
   CLOCK: [2013-06-09 Sun 19:51]--[2013-06-09 Sun 20:31] =>  0:40
   CLOCK: [2013-06-09 Sun 18:07]--[2013-06-09 Sun 18:14] =>  0:07
