--- a/TODO.org
+++ b/TODO.org
@@ -190,6 +190,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-12 Wed 13:14]--[2013-06-12 Wed 13:32] =>  0:18
   CLOCK: [2013-06-12 Wed 10:12]--[2013-06-12 Wed 11:11] =>  0:59
   CLOCK: [2013-06-12 Wed 02:56]--[2013-06-12 Wed 03:22] =>  0:26
   CLOCK: [2013-06-12 Wed 02:45]--[2013-06-12 Wed 02:52] =>  0:07
