move User Guide stub to after References

--- a/docs/template.tex
+++ b/docs/template.tex
@@ -117,4 +117,13 @@ $body$
 \bibliography{references}
 \addcontentsline{toc}{section}{References}
 
+\clearpage
+\appendix
+
+\section{User Guide}
+\label{sec:user-guide}
+
+%% README: How to setup and run?
+%% Haddock docs
+
 \end{document}
