detail Empirical Correctness section

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -469,3 +469,30 @@
     year = {2010},
     url = {http://guide.couchdb.org/draft/json.html}
 }
+
+@inproceedings{quickcheck,
+    author = {Koen Claessen and John Hughes},
+    title = {{QuickCheck: A Lightweight Tool for Random Testing of Haskell Programs}},
+    booktitle = {ACM SIGPLAN Notices},
+    year = {2000},
+    pages = {268--279},
+    publisher = {ACM Press}
+}
+
+@inproceedings{smallcheck,
+    author = {Runciman, Colin and Naylor, Matthew and Lindblad, Fredrik},
+    title = {{Smallcheck and lazy smallcheck: automatic exhaustive testing for small values}},
+    booktitle = {Proceedings of the first ACM SIGPLAN symposium on Haskell},
+    series = {Haskell '08},
+    year = {2008},
+    isbn = {978-1-60558-064-7},
+    location = {Victoria, BC, Canada},
+    pages = {37--48},
+    numpages = {12},
+    url = {http://doi.acm.org/10.1145/1411286.1411292},
+    doi = {10.1145/1411286.1411292},
+    acmid = {1411292},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {embedded language, exhaustive search, lazy evaluation, property-based testing, type classe}
+}
