explain why LTc's interface is better

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -496,3 +496,21 @@
     address = {New York, NY, USA},
     keywords = {embedded language, exhaustive search, lazy evaluation, property-based testing, type classe}
 }
+
+@inproceedings{syb,
+    author = {L\"{a}mmel, Ralf and Jones, Simon Peyton},
+    title = {{Scrap your boilerplate: a practical design pattern for generic programming}},
+    booktitle = {Proceedings of the 2003 ACM SIGPLAN international workshop on Types in languages design and implementation},
+    series = {TLDI '03},
+    year = {2003},
+    isbn = {1-58113-649-8},
+    location = {New Orleans, Louisiana, USA},
+    pages = {26--37},
+    numpages = {12},
+    url = {http://doi.acm.org/10.1145/604174.604179},
+    doi = {10.1145/604174.604179},
+    acmid = {604179},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {generic programming, rank-2 types, traversal, type cast},
+}
