write about why we chose Haskell

--- a/TODO.org
+++ b/TODO.org
@@ -190,6 +190,8 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-14 Fri 16:49]--[2013-06-14 Fri 17:38] =>  0:49
+  CLOCK: [2013-06-14 Fri 15:25]--[2013-06-14 Fri 16:38] =>  1:13
   CLOCK: [2013-06-13 Thu 01:32]--[2013-06-13 Thu 02:54] =>  1:22
   CLOCK: [2013-06-12 Wed 16:03]--[2013-06-12 Wed 17:44] =>  1:41
   CLOCK: [2013-06-12 Wed 14:11]--[2013-06-12 Wed 15:09] =>  0:58
