--- a/docs/references.bib
+++ b/docs/references.bib
@@ -514,3 +514,21 @@
     address = {New York, NY, USA},
     keywords = {generic programming, rank-2 types, traversal, type cast},
 }
+
+@inproceedings{type-families,
+     author = {Chakravarty, Manuel M. T. and Keller, Gabriele and Jones, Simon Peyton and Marlow, Simon},
+     title = {{Associated types with class}},
+     booktitle = {Proceedings of the 32nd ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+     series = {POPL '05},
+     year = {2005},
+     isbn = {1-58113-830-X},
+     location = {Long Beach, California, USA},
+     pages = {1--13},
+     numpages = {13},
+     url = {http://doi.acm.org/10.1145/1040305.1040306},
+     doi = {10.1145/1040305.1040306},
+     acmid = {1040306},
+     publisher = {ACM},
+     address = {New York, NY, USA},
+     keywords = {associated types, self-optimising libraries, type classes, type-directed translation, type-indexed types},
+}
