write about distributed guarantees

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -532,3 +532,12 @@
      address = {New York, NY, USA},
      keywords = {associated types, self-optimising libraries, type classes, type-directed translation, type-indexed types},
 }
+
+@inproceedings{revisiting-paxos,
+    author = {Roberto De Prisco and Butler Lampson},
+    title = {{Revisiting the Paxos algorithm}},
+    booktitle = {In Marios Mavronicolas and Philippas Tsigas, editors, Proceedings of the 11th International Workshop on Distributed Algorithms (WDAG 97), volume 1320 of Lecture Notes in Computer Science},
+    year = {1997},
+    pages = {111--125},
+    publisher = {Springer-Verlag}
+}
