--- a/TODO.org
+++ b/TODO.org
@@ -190,6 +190,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-15 Sat 13:18]--[2013-06-15 Sat 14:25] =>  1:07
   CLOCK: [2013-06-14 Fri 16:49]--[2013-06-14 Fri 17:38] =>  0:49
   CLOCK: [2013-06-14 Fri 15:25]--[2013-06-14 Fri 16:38] =>  1:13
   CLOCK: [2013-06-13 Thu 01:32]--[2013-06-13 Thu 02:54] =>  1:22
