--- a/docs/references.bib
+++ b/docs/references.bib
@@ -541,3 +541,36 @@
     pages = {111--125},
     publisher = {Springer-Verlag}
 }
+
+@misc{rfc1094,
+    author = {{Sun Microsystems}},
+    title = {{RFC1094 --- NFS: Network File System Protocol Specification}},
+    year = {1989},
+    url = {https://tools.ietf.org/html/rfc1094}
+}
+
+@inproceedings{stm,
+    author = {Shavit, Nir and Touitou, Dan},
+    title = {{Software transactional memory}},
+    booktitle = {Proceedings of the fourteenth annual ACM symposium on Principles of distributed computing},
+    series = {PODC '95},
+    year = {1995},
+    isbn = {0-89791-710-3},
+    location = {Ottowa, Ontario, Canada},
+    pages = {204--213},
+    numpages = {10},
+    url = {http://doi.acm.org/10.1145/224964.224987},
+    doi = {10.1145/224964.224987},
+    acmid = {224987},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+}
+
+@article{ACID,
+    author = {Theo Haerder and Andreas Reuter},
+    title = {{Principles of Transaction-Oriented Database Recovery}},
+    journal = {ACM Computing Surveys},
+    year = {1983},
+    volume = {15},
+    pages = {287--317}
+}
