--- a/TODO.org
+++ b/TODO.org
@@ -190,6 +190,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-16 Sun 03:04]--[2013-06-16 Sun 03:34] =>  0:30
   CLOCK: [2013-06-16 Sun 02:19]--[2013-06-16 Sun 02:59] =>  0:40
   CLOCK: [2013-06-16 Sun 01:59]--[2013-06-16 Sun 02:18] =>  0:19
   CLOCK: [2013-06-15 Sat 17:34]--[2013-06-15 Sat 18:29] =>  0:55
