--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-16 Sun 17:49]--[2013-06-16 Sun 18:43] =>  0:54
   CLOCK: [2013-06-04 Tue 13:34]--[2013-06-04 Tue 13:37] =>  0:03
   CLOCK: [2013-06-04 Tue 13:23]--[2013-06-04 Tue 13:31] =>  0:08
   CLOCK: [2013-06-04 Tue 00:05]--[2013-06-04 Tue 00:34] =>  0:29
@@ -85,6 +86,7 @@
   - [X] Receive store changes from neighbours
   - [ ] Apply changes from neighbours
   - [X] Keep track of suspected neighbour version clock
+  - [ ] ChangeSets (replaces DiffPacks)
   - [ ] Propagate store changes to neighbours
   - [ ] Initial synchronization with neighbours
   - [ ] Configurable update frequency
