--- a/TODO.org
+++ b/TODO.org
@@ -193,6 +193,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-17 Mon 13:34]--[2013-06-17 Mon 14:00] =>  0:26
   CLOCK: [2013-06-17 Mon 04:10]--[2013-06-17 Mon 04:44] =>  0:34
   CLOCK: [2013-06-17 Mon 03:26]--[2013-06-17 Mon 03:57] =>  0:31
   CLOCK: [2013-06-17 Mon 03:10]--[2013-06-17 Mon 03:26] =>  0:16
