update title page

--- a/docs/template.tex
+++ b/docs/template.tex
@@ -88,7 +88,7 @@
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 
-\newcommand{\mytitle}{LTc: Replicated data stores over bad connections\\[0.4cm]Project Report}
+\newcommand{\mytitle}{LTc: A replicated data store for high-latency disconnected environments\\[0.4cm]Project Report}
 \newcommand{\myauthor}{Alexandru Scvor\c tov}
 \newcommand{\myemail}{\email{<as10109@doc.ic.ac.uk>}}
 
@@ -98,23 +98,32 @@
 
 \begin{titlepage}
 
+  \vspace*{\fill}
+
   \begin{center}
     \textsc{Imperial College of Science, Technology and Medicine}\\[0.1cm]
     \textsc{Department of Computing}
 
     \vspace{3cm}
 
-    \textsc{\Large \mytitle}
+    \textsc{\Huge LTc}\\[0.2cm]
+    \textsc{\Large A replicated data store for high-latency disconnected environments}\\[1cm]
+    {\Large Project Report}\\
+    \textsc{June 2013}
 
-    \vspace{1cm}
+    \vspace{7cm}
 
     \textsc{\Large \myauthor}\\[0.1cm]
     \myemail
 
-    \vspace{2cm}
+    \vspace{1cm}
 
-    \textsc{Supervisor: Susan Eisenbach} \email{<susan@doc.ic.ac.uk>}
+    \textit{supervised by}\\
+    \textsc{Susan Eisenbach} \email{<susan@doc.ic.ac.uk>}\\
+    \textsc{Tristan Allwood} \email{<tora@doc.ic.ac.uk>}
   \end{center}
+
+  \vspace*{\fill}
 
 \end{titlepage}
 
