rewrite "Plugable Architecture"

--- a/TODO.org
+++ b/TODO.org
@@ -193,6 +193,8 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-17 Mon 17:13]--[2013-06-17 Mon 17:55] =>  0:42
+  CLOCK: [2013-06-17 Mon 16:19]--[2013-06-17 Mon 17:08] =>  0:49
   CLOCK: [2013-06-17 Mon 14:02]--[2013-06-17 Mon 14:20] =>  0:18
   CLOCK: [2013-06-17 Mon 13:34]--[2013-06-17 Mon 14:00] =>  0:26
   CLOCK: [2013-06-17 Mon 04:10]--[2013-06-17 Mon 04:44] =>  0:34
