--- a/TODO.org
+++ b/TODO.org
@@ -193,6 +193,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-17 Mon 18:08]--[2013-06-17 Mon 18:27] =>  0:19
   CLOCK: [2013-06-17 Mon 17:13]--[2013-06-17 Mon 17:55] =>  0:42
   CLOCK: [2013-06-17 Mon 16:19]--[2013-06-17 Mon 17:08] =>  0:49
   CLOCK: [2013-06-17 Mon 14:02]--[2013-06-17 Mon 14:20] =>  0:18
