--- a/TODO.org
+++ b/TODO.org
@@ -193,6 +193,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-18 Tue 02:11]--[2013-06-18 Tue 02:57] =>  0:46
   CLOCK: [2013-06-18 Tue 00:51]--[2013-06-18 Tue 01:57] =>  1:06
   CLOCK: [2013-06-18 Tue 00:05]--[2013-06-18 Tue 00:41] =>  0:36
   CLOCK: [2013-06-17 Mon 23:40]--[2013-06-17 Mon 23:58] =>  0:18
