--- a/TODO.org
+++ b/TODO.org
@@ -193,6 +193,7 @@
 * TODO Check documentation
 * Final Report
   :LOGBOOK:
+  CLOCK: [2013-06-18 Tue 10:28]--[2013-06-18 Tue 10:44] =>  0:16
   CLOCK: [2013-06-18 Tue 09:29]--[2013-06-18 Tue 10:27] =>  0:58
   CLOCK: [2013-06-18 Tue 08:54]--[2013-06-18 Tue 09:19] =>  0:25
   CLOCK: [2013-06-18 Tue 07:59]--[2013-06-18 Tue 08:52] =>  0:53
