--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-20 Thu 16:00]--[2013-06-20 Thu 17:29] =>  1:29
   CLOCK: [2013-06-20 Thu 15:15]--[2013-06-20 Thu 15:57] =>  0:42
   CLOCK: [2013-06-20 Thu 00:11]--[2013-06-20 Thu 01:05] =>  0:54
   CLOCK: [2013-06-16 Sun 17:49]--[2013-06-16 Sun 18:43] =>  0:54
