--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-20 Thu 23:22]--[2013-06-20 Thu 23:47] =>  0:25
   CLOCK: [2013-06-20 Thu 23:10]--[2013-06-20 Thu 23:21] =>  0:11
   CLOCK: [2013-06-20 Thu 22:22]--[2013-06-20 Thu 23:05] =>  0:43
   CLOCK: [2013-06-20 Thu 16:00]--[2013-06-20 Thu 17:29] =>  1:29
@@ -93,8 +94,7 @@
   - [ ] Apply changes from neighbours
   - [X] Keep track of suspected neighbour version clock
   - [ ] ChangeSets (replaces DiffPacks)
-  - [ ] Propagate store changes to neighbours
-  - [ ] Initial synchronization with neighbours
+  - [X] Propagate store changes to neighbours
   - [ ] Configurable update frequency
 * DONE Abstract network interface
   :LOGBOOK:
