--- a/TODO.org
+++ b/TODO.org
@@ -258,6 +258,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-21 Fri 01:36]--[2013-06-21 Fri 03:06] =>  1:30
   CLOCK: [2013-06-21 Fri 00:48]--[2013-06-21 Fri 01:27] =>  0:39
   :END:
 * Code improvements
