introduce data replication

--- a/TODO.org
+++ b/TODO.org
@@ -258,6 +258,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-21 Fri 07:58]--[2013-06-21 Fri 08:49] =>  0:51
   CLOCK: [2013-06-21 Fri 07:22]--[2013-06-21 Fri 07:56] =>  0:34
   CLOCK: [2013-06-21 Fri 01:36]--[2013-06-21 Fri 03:06] =>  1:30
   CLOCK: [2013-06-21 Fri 00:48]--[2013-06-21 Fri 01:27] =>  0:39
