--- a/docs/presentation/template.tex
+++ b/docs/presentation/template.tex
@@ -10,6 +10,9 @@
 % Provides \textsubscript
 \usepackage{fixltx2e}
 
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows,positioning}
+
 \usepackage[osf]{libertine}
 
 %\usepackage[T1]{fontenc}
