write about master-slave replication

--- a/TODO.org
+++ b/TODO.org
@@ -258,6 +258,8 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-21 Fri 09:44]--[2013-06-21 Fri 09:49] =>  0:05
+  CLOCK: [2013-06-21 Fri 09:27]--[2013-06-21 Fri 09:44] =>  0:17
   CLOCK: [2013-06-21 Fri 09:05]--[2013-06-21 Fri 09:24] =>  0:19
   CLOCK: [2013-06-21 Fri 07:58]--[2013-06-21 Fri 08:49] =>  0:51
   CLOCK: [2013-06-21 Fri 07:22]--[2013-06-21 Fri 07:56] =>  0:34
