--- a/TODO.org
+++ b/TODO.org
@@ -258,6 +258,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-21 Fri 09:59]--[2013-06-21 Fri 10:19] =>  0:20
   CLOCK: [2013-06-21 Fri 09:44]--[2013-06-21 Fri 09:49] =>  0:05
   CLOCK: [2013-06-21 Fri 09:27]--[2013-06-21 Fri 09:44] =>  0:17
   CLOCK: [2013-06-21 Fri 09:05]--[2013-06-21 Fri 09:24] =>  0:19
