write about LTc storing all the previous states

--- a/docs/presentation/template.tex
+++ b/docs/presentation/template.tex
@@ -11,7 +11,7 @@
 \usepackage{fixltx2e}
 
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows,positioning}
+\usetikzlibrary{shapes,arrows,positioning,calc}
 
 \usepackage[osf]{libertine}
 
