--- a/TODO.org
+++ b/TODO.org
@@ -258,6 +258,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-21 Fri 10:29]--[2013-06-21 Fri 10:45] =>  0:16
   CLOCK: [2013-06-21 Fri 10:20]--[2013-06-21 Fri 10:28] =>  0:08
   CLOCK: [2013-06-21 Fri 09:59]--[2013-06-21 Fri 10:19] =>  0:20
   CLOCK: [2013-06-21 Fri 09:44]--[2013-06-21 Fri 09:49] =>  0:05
