write about changes

--- a/TODO.org
+++ b/TODO.org
@@ -258,6 +258,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-21 Fri 11:30]--[2013-06-21 Fri 11:43] =>  0:13
   CLOCK: [2013-06-21 Fri 11:16]--[2013-06-21 Fri 11:29] =>  0:13
   CLOCK: [2013-06-21 Fri 10:29]--[2013-06-21 Fri 10:45] =>  0:16
   CLOCK: [2013-06-21 Fri 10:20]--[2013-06-21 Fri 10:28] =>  0:08
