write about propagating updates

--- a/TODO.org
+++ b/TODO.org
@@ -258,6 +258,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-21 Fri 12:19]--[2013-06-21 Fri 12:31] =>  0:12
   CLOCK: [2013-06-21 Fri 11:44]--[2013-06-21 Fri 12:17] =>  0:33
   CLOCK: [2013-06-21 Fri 11:30]--[2013-06-21 Fri 11:43] =>  0:13
   CLOCK: [2013-06-21 Fri 11:16]--[2013-06-21 Fri 11:29] =>  0:13
