get rid of presentation notes

--- a/docs/presentation/template.tex
+++ b/docs/presentation/template.tex
@@ -1,4 +1,4 @@
-\documentclass[ignorenonframetext,handout,notes=show]{beamer}
+\documentclass[ignorenonframetext]{beamer}
 %% Add ``handout,notes=show'' above to show notes.
 \usetheme{default}
 \usecolortheme{beaver}
