the constructor for Changes should not be exported

--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-22 Sat 10:05]--[2013-06-22 Sat 11:33] =>  1:28
   CLOCK: [2013-06-20 Thu 23:22]--[2013-06-20 Thu 23:47] =>  0:25
   CLOCK: [2013-06-20 Thu 23:10]--[2013-06-20 Thu 23:21] =>  0:11
   CLOCK: [2013-06-20 Thu 22:22]--[2013-06-20 Thu 23:05] =>  0:43
