--- a/TODO.org
+++ b/TODO.org
@@ -260,6 +260,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-22 Sat 13:40]--[2013-06-22 Sat 14:40] =>  1:00
   CLOCK: [2013-06-21 Fri 12:19]--[2013-06-21 Fri 12:31] =>  0:12
   CLOCK: [2013-06-21 Fri 11:44]--[2013-06-21 Fri 12:17] =>  0:33
   CLOCK: [2013-06-21 Fri 11:30]--[2013-06-21 Fri 11:43] =>  0:13
