--- a/TODO.org
+++ b/TODO.org
@@ -260,6 +260,9 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-22 Sat 17:06]--[2013-06-22 Sat 17:08] =>  0:02
+  CLOCK: [2013-06-21 Fri 13:00]--[2013-06-21 Fri 15:30] =>  2:30
+  CLOCK: [2013-06-22 Sat 14:45]--[2013-06-22 Sat 16:30] =>  1:45
   CLOCK: [2013-06-22 Sat 13:40]--[2013-06-22 Sat 14:40] =>  1:00
   CLOCK: [2013-06-21 Fri 12:19]--[2013-06-21 Fri 12:31] =>  0:12
   CLOCK: [2013-06-21 Fri 11:44]--[2013-06-21 Fri 12:17] =>  0:33
