--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-23 Sun 01:10]--[2013-06-23 Sun 01:57] =>  0:47
   CLOCK: [2013-06-22 Sat 11:38]--[2013-06-22 Sat 11:47] =>  0:09
   CLOCK: [2013-06-22 Sat 10:05]--[2013-06-22 Sat 11:33] =>  1:28
   CLOCK: [2013-06-20 Thu 23:22]--[2013-06-20 Thu 23:47] =>  0:25
