treat fast-forwards separately from merges

--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-23 Sun 02:55]--[2013-06-23 Sun 03:12] =>  0:17
   CLOCK: [2013-06-23 Sun 02:39]--[2013-06-23 Sun 02:45] =>  0:06
   CLOCK: [2013-06-23 Sun 01:10]--[2013-06-23 Sun 01:57] =>  0:47
   CLOCK: [2013-06-22 Sat 11:38]--[2013-06-22 Sat 11:47] =>  0:09
