--- a/TODO.org
+++ b/TODO.org
@@ -268,6 +268,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-23 Sun 13:03]--[2013-06-23 Sun 13:18] =>  0:15
   CLOCK: [2013-06-22 Sat 17:06]--[2013-06-22 Sat 17:08] =>  0:02
   CLOCK: [2013-06-21 Fri 13:00]--[2013-06-21 Fri 15:30] =>  2:30
   CLOCK: [2013-06-22 Sat 14:45]--[2013-06-22 Sat 16:30] =>  1:45
