--- a/docs/presentation/template.tex
+++ b/docs/presentation/template.tex
@@ -3,6 +3,7 @@
 \usetheme{default}
 \usecolortheme{beaver}
 
+\usepackage{cancel}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
