--- a/TODO.org
+++ b/TODO.org
@@ -199,7 +199,7 @@
   :END:
   - [X] Configurable stub
   - [X] Artificial delays
-* TODO dBayc
+* TODO dBay
   :LOGBOOK:
   CLOCK: [2013-06-23 Sun 14:36]--[2013-06-23 Sun 15:04] =>  0:28
   :END:
@@ -295,6 +295,8 @@
   :END:
 * Code improvements
   :LOGBOOK:
+  CLOCK: [2013-06-23 Sun 15:24]--[2013-06-23 Sun 15:29] =>  0:05
+  CLOCK: [2013-06-23 Sun 15:08]--[2013-06-23 Sun 15:22] =>  0:14
   CLOCK: [2013-06-10 Mon 01:23]--[2013-06-10 Mon 01:33] =>  0:10
   CLOCK: [2013-06-04 Tue 00:35]--[2013-06-04 Tue 00:37] =>  0:02
   CLOCK: [2013-06-03 Mon 16:56]--[2013-06-03 Mon 17:19] =>  0:23
