--- a/TODO.org
+++ b/TODO.org
@@ -272,6 +272,7 @@
   :END:
 * Presentation
   :LOGBOOK:
+  CLOCK: [2013-06-23 Sun 18:59]--[2013-06-23 Sun 19:30] =>  0:31
   CLOCK: [2013-06-23 Sun 13:45]--[2013-06-23 Sun 14:12] =>  0:27
   CLOCK: [2013-06-23 Sun 13:03]--[2013-06-23 Sun 13:18] =>  0:15
   CLOCK: [2013-06-22 Sat 17:06]--[2013-06-22 Sat 17:08] =>  0:02
