--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-23 Sun 23:55]--[2013-06-24 Mon 00:35] =>  0:40
   CLOCK: [2013-06-23 Sun 12:09]--[2013-06-23 Sun 12:19] =>  0:10
   CLOCK: [2013-06-23 Sun 10:26]--[2013-06-23 Sun 12:07] =>  1:41
   CLOCK: [2013-06-23 Sun 03:56]--[2013-06-23 Sun 04:12] =>  0:16
