generate events for internal changes

--- a/TODO.org
+++ b/TODO.org
@@ -47,6 +47,7 @@
   - [X] Graph sets/gets
 * TODO UDP Connections
   :LOGBOOK:
+  CLOCK: [2013-06-24 Mon 05:33]--[2013-06-24 Mon 05:39] =>  0:06
   CLOCK: [2013-06-24 Mon 04:49]--[2013-06-24 Mon 05:31] =>  0:42
   CLOCK: [2013-06-24 Mon 04:34]--[2013-06-24 Mon 04:46] =>  0:12
   CLOCK: [2013-06-24 Mon 04:26]--[2013-06-24 Mon 04:33] =>  0:07
