add stub dBay JS

--- a/TODO.org
+++ b/TODO.org
@@ -209,6 +209,7 @@
   - [X] Artificial delays
 * TODO dBay
   :LOGBOOK:
+  CLOCK: [2013-06-24 Mon 07:48]--[2013-06-24 Mon 07:50] =>  0:02
   CLOCK: [2013-06-24 Mon 07:17]--[2013-06-24 Mon 07:48] =>  0:31
   CLOCK: [2013-06-24 Mon 06:37]--[2013-06-24 Mon 06:47] =>  0:10
   CLOCK: [2013-06-24 Mon 05:52]--[2013-06-24 Mon 06:06] =>  0:14
